<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" > Pillhelper </string>
    <string name="NewMedication"> New Medication !</string>
    <string name="Dose" > 250mg</string>
    <string name="Paracetamol"> Paracetamol</string>
    <string name="todo">TODO</string>
    <string name="Dosis" > Dose </string>
    <string name="Medicationname"> Medicationname </string>
    <string name="Safe" >Save</string>
    <string name="Delete" tools:ignore="MissingTranslation">Delete</string>
    <string name="Added" tools:ignore="MissingTranslation"> New medication added!</string>
    <string name="global_confirm">Confirm</string>
    <string name="global_warning">Warning</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_ok">OK</string>
    <string name="global_yes">Yes</string>
    <string name="global_no">No</string>
    <string name="removedid">Removed id</string>
    <string name="failedtocreatefolder">Failed to create folder</string>
    <string name="DateLabel">Date</string>
    <string name="FunctionLabel">Display</string>
    <string name="HistoryLabel">History</string>
    <string name="GraphLabel">Graphs</string>
    <string name="AddLabel">Add</string>
    <string name="DeleteLabel">Delete</string>
    <string name="ShareLabel">Share</string>
    <string name="EditLabel">Edit</string>
    <string name="DeleteRecordDialog">Remove this record?</string>
    <string name="FonteLabel"> Prescriptions </string>
    <string name="RecordLabel">Records</string>
    <string name="SerieLabel">Dosis: </string>
    <string name="RepetitionLabel_short">Intake per day: </string>
    <string name="DoseLabel" tools:ignore="MissingTranslation">value</string>
    <string name="mgUnitLabel">mg</string>
    <string name="gUnitLabel">g</string>
    <string name="NotesLabel">Notes</string>
    <string name="TopTenLabel">Last records:</string>
    <string name="ShareText">Share</string>
    <string name="ShareTitle">Share your perf</string>
    <string name="ShareInstruction">Edit your text before sending:</string>
    <string name="ShareTextDefault">I have taken __ Pills in __ mg of my __Medication__</string>
    <string name="ShareParamAmount">__AMOUNT__</string>
    <string name="ShareParamMedication">__MEDICATION__</string>
    <string name="LongLabel">Long-term Prescriptions</string>
    <string name="DistanceLabel">Distance (Km)</string>
    <string name="DurationLabel">Duration</string>
    <string name="MedicationLabel">Medication</string>
    <string name="HealthMenuLabel">Health Track</string>
    <string name="weightLabel">Weight(kg)</string>
    <string name="fatLabel">Fat(%)</string>
    <string name="bonesLabel">Bones(%)</string>
    <string name="waterLabel">Water(%)</string>
    <string name="musclesLabel">Muscles(%)</string>
    <string name="measureLabel">Measure</string>
    <string name="sizeTableLabel">Measures history:</string>
    <string name="createProfilTitle">Create new profile</string>
    <string name="profileSelected">Profile selected</string>
    <string name="createProfilQuestion">Choose your profile name?</string>
    <string name="userChanged">User changed</string>
    <string name="renameProfilTitle">Rename profile</string>
    <string name="renameProfilQuestion">Rename this profile?</string>
    <string name="SettingLabel">Settings</string>
    <string name="export_database">Export Records</string>
    <string name="export_question">Do you want to export the database of </string>
    <string name="export_success">Database exported</string>
    <string name="export_failed">Database export failed</string>
    <string name="import_database">Import Records</string>
    <string name="deleteDB_warning">
        This action will reset the entire application.
        All data will be lost.
        Are you sure?
        This will exit the application.
    </string>
    <string name="ResetAppLabel">Reset application</string>
    <string name="MedicationsLabel">Medication</string>
    <string name="pref_ui_setting">UI Settings</string>
    <string name="pref_show_mp3_player">Show MP3 Player</string>
    <string name="pref_show_mp3_player_summary">Show/hide the MP3 player toolbar</string>
    <string name="pref_medication_setting">Prescription Settings</string>
    <string name="pref_preferredUnitSummary">Preferred intake unit:</string>
    <string name="pref_preferredUnitTitle">Select your preferred intake unit</string>
    <string name="profil_create_new">Create new profile</string>
    <string name="profil_change">Change profile</string>
    <string name="profil_select_profil">Select a profile</string>
    <string name="profil_delete">Delete a profile</string>
    <string name="profil_select_profil_to_delete">Select a profile to delete</string>
    <string name="AboutLabel">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="fonte_units">
        <item>@string/mgUnitLabel</item>
        <item>@string/gUnitLabel</item>
    </string-array>
    <string-array name="fonte_unitsEnum">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="maxIntake1">Maximum Intake above 3</string>
    <string name="maxIntake5">Maximum Intake below 3 </string>
    <string name="sum">Sum</string>
    <string-array name="graph_functions">
        <item>@string/maxIntake1</item>
        <item>@string/maxIntake5</item>
        <item>@string/sum</item>
    </string-array>
    <string name="sumDistance">Distance</string>
    <string name="sumDuration">Duration</string>
    <string name="speed">Speed</string>
    <string-array name="graph_cardio_functions">
        <item>@string/sumDistance</item>
        <item>@string/sumDuration</item>
        <item>@string/speed</item>
    </string-array>
    <string name="all">All</string>
    <string name="bodytracking">Health Track</string>
    <string name="backDialog_confirm_text">Do you want to save before exiting?</string>
    <string name="deleteMedication_confirm_text">Do you want to delete this medication? All associated records will be deleted.</string>
    <string name="renameMedication_warning_text">WARNING: This medication name already exists. Records will be merged with the other exercise.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="graph_all">All</string>
    <string name="graph_lastyear">Last Year</string>
    <string name="graph_lastmonth">Last Month</string>
    <string name="graph_lastweek">Last Week</string>
    <string name="ChronometerLabel">Chronometer</string>
    <string name="lastRecordLabel">Last record</string>
    <string name="MedicationHint">Filter by medication name</string>
    <string name="exit">Exit</string>
    <string name="selectPrescriptionDialogLabel">Select an existing prescription</string>
    <string name="fillNameField">Please enter your name, at least</string>
    <string name="introSlide1Title">Hello</string>
    <string name="size_cm_optional">Size in cm (optional)</string>
    <string name="create">Create</string>
    <string name="birthday_optional">Birthday (optional)</string>
    <string name="name_or_pseudo">Name / pseudonym</string>
    <string name="name_is_required">Name is required</string>
    <string name="create_a_profile">Create a profile</string>
    <string name="introSlide1Text">Welcome to Pillhelper! This application is a quick and simple way to record your prescriptions and make sure to never forget your next dose. </string>
    <string name="introSlide2Text">Write down the names of your medication and the prescription details, so that a list be created automatically just for you.</string>
    <string name="introSlide2Title">It is quick and easy!</string>
    <string name="titleSlideEssential">Go to the essential</string>
    <string name="textSlideEssential">No prescriptions are pre-created. You create your own prescriptions simply depending on the name of the medication your doctor has advised for you. </string>
    <string name="pressBackAgain">Click BACK again to exit</string>
    <string name="titleSlideOpenSource">We are here for you!</string>
    <string name="textSlideOpenSource">Join the community under https://www.drugs.com/</string>
    <string name="profileCreated">Profile created</string>
    <string name="missinginfo">Missing info</string>
    <string name="createMedicationFirst">You must add a new medication first</string>
    <string name="impossibleToDeleteProfile">Impossible to delete current profile</string>
    <string name="profileDeleted">Profile deleted</string>
    <string name="areyousure">Are you sure?</string>
    <string name="edit_soon_available">Edit soon available</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="med">Medication</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="profileEnterYourSize">Your size</string>
    <string name="profileEnterYourBirthday">Your birthday</string>
    <string name="profile_page">Profile page</string>
    <string name="ProfileLabel">Profile</string>
    <string name="edit_value">Edit value</string>
    <string name="obsoleteLongTermTab">You can now use the Record menu for your short-term and long-term medication needs! This tab will disappear in a future update.</string>
    <string name="menu_Prescription">Prescription</string>
    <string name="renameMedication_error_text2">ERROR: This medication name already exists. It is not possible to merge two medications with same name and different types.</string>
    <string name="recordcopied">Record copied</string>
    <string name="imcLabel">BMI</string>
    <string name="rfmLabel">RFM</string>
    <string name="underweight">underweight</string>
    <string name="normal">normal</string>
    <string name="overweight">overweight</string>
    <string name="obese">obese</string>
    <string name="maleGender">Male</string>
    <string name="femaleGender">Female</string>
    <string name="otherGender">Other</string>
    <string name="enter_gender_here">Enter gender</string>
    <string name="no_size_available">no size available</string>
    <string name="no_weight_available">no weight available</string>
    <string name="BMI_dialog_title">Body Mass Index (BMI)</string>
    <string name="BMI_formula">BMI = weight(kg) / size(m)²</string>
    <string name="RFM_dialog_title">Relative Fat Mass Index (RFM)</string>
    <string name="RFM_female_formula">Women: RFM = 76 – (20 x (size/waist circumference))</string>
    <string name="RFM_male_formula">Men: RFM = 64 – (20 x (size/waist circumference))</string>
    <string name="access_granted">Access granted</string>
    <string name="another_time_maybe">Maybe another time :)</string>
    <string name="new_folder">New folder</string>
    <string name="ffmiLabel">FFMI</string>
    <string name="FFMI_dialog_title">Fat-free mass index (FFMI)</string>
    <string name="FFMI_formula" translatable="false">FFMI [kg/m2] = weight [kg] × (1 − (body fat [%] / 100)) / (height [m])²</string>
    <string name="no_fat_available">no fat available</string>
    <string name="indexLabel">Index</string>
    <string name="database_version_label">Google Firebase</string>
    <string name="opensource_label">Open Source</string>
    <string name="thanks_label">Thank you, for the Open Source Project</string>
    <string name="LbsUnitLabel">Lbs</string>
    <string name="KgUnitLabel">kg</string>
</resources>