<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    android:padding="6dip">

    <TextView
        android:id="@+id/LIST_MEDICATION_ID"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/LIST_MEDICATION_LOGO"
        android:layout_width="45dp"
        android:layout_height="fill_parent"
        android:layout_marginEnd="6dip"
        android:background="@color/background_even"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_favorite_black_24dp" />

    <TextView
        android:id="@+id/LIST_MEDICATION"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:gravity="center_vertical"
        android:text="@string/Medicationname"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_weight="90"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lastRecordLabel"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/LIST_MEDICATION_RECORD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Dose"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
