<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_medication_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/medication_photo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp">

            <ImageView
                android:id="@+id/medication_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/background_even"
                android:contentDescription="@string/todo"
                android:cropToPadding="false"
                android:maxHeight="200dp"
                android:minHeight="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_filter_vintage_black_24dp" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dip">

                <LinearLayout
                    android:id="@+id/MedicationTypeSelectionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <androidx.cardview.widget.CardView
                        style="@style/CardViewStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40">

                        <TextView
                            android:id="@+id/MedicationSelection"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/background_odd"
                            android:gravity="center"
                            android:text="@string/FonteLabel" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/CardViewStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40">

                        <TextView
                            android:id="@+id/LongTermSelection"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/LongLabel" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/medication_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:importantForAutofill="no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/description"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/medication_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/medication_dose_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/med"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/medication_dose"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textSize="14sp"
                    android:importantForAutofill="no" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actionCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_camera"
        app:backgroundTint="@color/launcher_background"
        app:layout_anchor="@id/medication_photo"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
