<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:name="tab_fontes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EEEEEE"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:animateLayoutChanges="true"
        android:background="#EEEEEE"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:scrollbars="vertical">

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp">



                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/imageMedication"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical|center"
                        android:src="@drawable/ic_filter_vintage_black_24dp"
                        app:civ_border_color="#EEEEEE"
                        app:civ_border_width="0dp"
                        app:civ_shadow="false"
                        app:civ_shadow_color="#8BC34A"
                        app:civ_shadow_radius="0" />

                    <AutoCompleteTextView
                        android:id="@+id/editMedication"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toStartOf="@+id/buttonListMedication"
                        android:hint="@string/MedicationHint"
                        android:imeOptions="actionNext"
                        android:inputType="text|textCapWords|textAutoComplete|textNoSuggestions|textVisiblePassword"
                        android:singleLine="true" />

                    <ImageButton
                        android:id="@+id/buttonListMedication"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:baselineAlignBottom="false"
                        android:cropToPadding="false"
                        android:src="@drawable/list" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/MedicationTypeSelectionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_weight="0"
                android:gravity="center" />

            <androidx.cardview.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/MedicationSelection"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_odd"
                    android:gravity="center"
                    android:text="@string/FonteLabel" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/LongTermSelection"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/LongLabel" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bodybuildingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="visible">

            <androidx.cardview.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="40"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:orientation="vertical"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="40"
                app:cardCornerRadius="5dp">

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="40"
                app:cardCornerRadius="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardioLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="gone">


            <androidx.cardview.widget.CardView
                style="@style/CardViewStyle"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/DistanceLabel" />

                    <EditText
                        android:id="@+id/editDistance"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:importantForAutofill="no" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/DurationLabel" />

                    <EditText
                        android:id="@+id/editDuration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:gravity="center"
                        android:inputType="time"
                        android:importantForAutofill="no">

                    </EditText>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/notesLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="8dp"
                            android:gravity="start"
                            android:text="@string/NotesLabel" />


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="3dp"
                android:text="@string/TopTenLabel" />

        </LinearLayout>

        <com.pillhelper.utils.ExpandedListView
            android:id="@+id/listRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="false"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:fastScrollEnabled="false"
            android:isScrollContainer="false"
            android:scrollbars="none" />

    </LinearLayout>
</ScrollView>
